Removed Java 21 calls that are breaking CI / prod